# stmsn_dbt

./: .dockerignore  .gitignore  Dockerfile  dbt_project.yml  justfile  package-lock.yml  packages.yml  pyproject.toml  todo.md
.github/ci-profiles/: profiles.yml
.github/workflows/: docs.yml  publish.yml
docs/: _docs_address.md  _docs_aggregates.md  _docs_calculated_metrics.md  _docs_districts.md  _docs_geography.md  _docs_impervious_surfaces.md  _docs_parcels_core.md  _docs_parcels_extended.md  _docs_streets.md  _docs_system.md  _docs_tax_assessment.md  route-traffic.md
macros/: apply_overlay_to_parcels.sql  apply_overlay_to_streets.sql  apply_overlay_to_surfaces.sql  apply_overlay_to_surfaces.yml  ducklake_cleanup.sql  generate_fact_overlay.sql  get_external_location.sql
models/: exposures.yml  init.sql  overview.md
models/bronze/: madison.yml
models/gold/: agg_route_traffic_daily.sql  agg_route_traffic_daily.yml  fact_alder_districts.sql  fact_alder_districts.yml  fact_area_plans.sql  fact_area_plans.yml  fact_sites.sql  init.sql
models/silver/: dim_route.sql  dim_route.yml  fact_parcels.sql  fact_parcels.yml  fact_route_traffic.sql  fact_route_traffic.yml  fact_sites.sql  fact_sites.yml  fact_streets.sql  fact_streets.yml  fact_tax_roll.sql  fact_tax_roll.yml
profiles/: profiles.yml
scripts/: add_documentation.py  bootstrap.sql  bootstrap_dev.sql  catalog.py  entrypoint.py  generate_remaining_yml.py  generate_yml_from_manifest.py  split_docs.py
seeds/: config_changes.csv  holidays.csv  schema.yml
staging/parcels/: stg_parcels_fix_lot_size.sql
(+29 files in other folders)
