[project]
name = "stmsn-dbt"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb~=1.10.1",
    "dbt-core>=1.10,<2.0",
    "duckdb==1.5.4",
    "ruamel-yaml>=0.18.17",
    "google-cloud-storage>=2.18",
    "stmsn-catalog",
]

[dependency-groups]
dev = [
    "duckdb-cli~=1.5.4",
]

[tool.uv.sources]
stmsn-catalog = { git = "https://github.com/bnoffke/stmsn-catalog" }
